bug: fixed scaling issues

--- a/custom/general.conf
+++ b/custom/general.conf
@@ -6,3 +6,11 @@
 input {
 	kb_layout = de,us
 }
+
+xwayland {
+	force_zero_scaling = true
+	use_nearest_neighbor = true
+}
+
+env = GDK_SCALE,1.25
+env = XCURSOR_SIZE,32
