keybinds: switched browser to vivaldi and added keybind for notion calendar

--- a/hyprland/keybinds.conf
+++ b/hyprland/keybinds.conf
@@ -31,7 +31,7 @@ bind = Super, B, global, quickshell:sidebarLeftToggle # [hidden]
 bind = Super, O, global, quickshell:sidebarLeftToggle # [hidden]
 bindd = Super, N, Toggle right sidebar, global, quickshell:sidebarRightToggle # Toggle right sidebar
 bindd = Super, Plus, Toggle cheatsheet, global, quickshell:cheatsheetToggle # Toggle cheatsheet
-bindd = Super, K, Toggle on-screen keyboard, global, quickshell:oskToggle # Toggle on-screen keyboard
+#bindd = Super, K, Toggle on-screen keyboard, global, quickshell:oskToggle # Toggle on-screen keyboard
 bindd = Super, M, Toggle media controls, global, quickshell:mediaControlsToggle # Toggle media controls
 bindd = Ctrl+Alt, Delete, Toggle session menu, global, quickshell:sessionToggle # Toggle session menu
 bindd = Super, J, Toggle bar, global, quickshell:barToggle # Toggle bar
@@ -214,7 +214,8 @@ bind = Super, Return, exec, ~/.config/hypr/hyprland/scripts/launch_first_availab
 bind = Super, T, exec, ~/.config/hypr/hyprland/scripts/launch_first_available.sh  "${TERMINAL}" "kitty -1" "foot" "alacritty" "wezterm" "konsole" "kgx" "uxterm" "xterm" # [hidden] (terminal) (alt)
 bind = Ctrl+Alt, T, exec, ~/.config/hypr/hyprland/scripts/launch_first_available.sh "${TERMINAL}" "kitty -1" "foot" "alacritty" "wezterm" "konsole" "kgx" "uxterm" "xterm" # [hidden] (terminal) (for Ubuntu people)
 bind = Super, E, exec, ~/.config/hypr/hyprland/scripts/launch_first_available.sh "nautilus" "dophin" "nemo" "thunar" "${TERMINAL}" "kitty -1 fish -c yazi" # File manager
-bind = Super, W, exec, ~/.config/hypr/hyprland/scripts/launch_first_available.sh "google-chrome-stable" "zen-browser" "firefox" "brave" "chromium" "microsoft-edge-stable" "opera" "librewolf" # Browser
+bind = Super, K, exec, /usr/lib/firefox/firefox --class WebApp-NotionCalendar7218 --name WebApp-NotionCalendar7218 --profile /home/felix/.local/share/ice/firefox/NotionCalendar7218 --no-remote https://calendar.notion.so
+bind = Super, W, exec, ~/.config/hypr/hyprland/scripts/launch_first_available.sh "vivaldi" "google-chrome-stable" "zen-browser" "firefox" "brave" "chromium" "microsoft-edge-stable" "opera" "librewolf" # Browser
 bind = Super, C, exec, ~/.config/hypr/hyprland/scripts/launch_first_available.sh "code" "codium" "cursor" "zed" "zedit" "zeditor" "kate" "gnome-text-editor" "emacs" "command -v nvim && kitty -1 nvim" "command -v micro && kitty -1 micro" # Code editor
 bind = Super+Shift, W, exec, ~/.config/hypr/hyprland/scripts/launch_first_available.sh "wps" "onlyoffice-desktopeditors" # Office software
 bind = Super, X, exec, ~/.config/hypr/hyprland/scripts/launch_first_available.sh "kate" "gnome-text-editor" "emacs" # Text editor
