--- a/custom/env.conf
+++ b/custom/env.conf
@@ -1,8 +1,11 @@
 # You can put extra environment variables here
 # https://wiki.hyprland.org/Configuring/Environment-variables/
 
-# env = XDG_CURRENT_DESKTOP,Hyprland
-env = XDG_CURRENT_DESKTOP,GNOME
-env = XDG_SESSION_DESKTOP,gnome
+env = XDG_SESSION_TYPE,wayland
+env = XDG_CURRENT_DESKTOP,Hyprland
+# env = XDG_CURRENT_DESKTOP,GNOME
+env = XDG_SESSION_DESKTOP,Hyprland
+# env = XDG_SESSION_DESKTOP,gnome
 env = QT_AUTO_SCREEN_SCALE_FACTOR,1.25
 env = QT_QPA_PLATFORMTHEME,gnome
+env = XDG_MENU_PREFIX, gnome-
