--- a/custom/execs.conf
+++ b/custom/execs.conf
@@ -2,4 +2,5 @@
 # Relevant Hyprland wiki section: https://wiki.hyprland.org/Configuring/Keywords/#executing
 
 exec-once = kbuildsycoca6
+exec-once = /usr/bin/kdeconnectd
 # exec-once = caps2esc -m 1
