--- a/hyprland/keybinds.conf
+++ b/hyprland/keybinds.conf
@@ -214,7 +214,7 @@ bind = Super, Return, exec, ~/.config/hypr/hyprland/scripts/launch_first_availab
 bind = Super, T, exec, ~/.config/hypr/hyprland/scripts/launch_first_available.sh  "${TERMINAL}" "kitty -1" "foot" "alacritty" "wezterm" "konsole" "kgx" "uxterm" "xterm" # [hidden] (terminal) (alt)
 bind = Ctrl+Alt, T, exec, ~/.config/hypr/hyprland/scripts/launch_first_available.sh "${TERMINAL}" "kitty -1" "foot" "alacritty" "wezterm" "konsole" "kgx" "uxterm" "xterm" # [hidden] (terminal) (for Ubuntu people)
 bind = Super, E, exec, ~/.config/hypr/hyprland/scripts/launch_first_available.sh "nautilus" "dophin" "nemo" "thunar" "${TERMINAL}" "kitty -1 fish -c yazi" # File manager
-bind = Super, K, exec, /usr/lib/firefox/firefox --class WebApp-NotionCalendar7218 --name WebApp-NotionCalendar7218 --profile /home/felix/.local/share/ice/firefox/NotionCalendar7218 --no-remote https://calendar.notion.so
+bind = Super, K, exec, vivaldi-stable --app="https://calendar.notion.so" --class=WebApp-NotionCalendar5640 --name=WebApp-NotionCalendar5640 --user-data-dir=/home/felix/.local/share/ice/profiles/NotionCalendar5640
 bind = Super, W, exec, ~/.config/hypr/hyprland/scripts/launch_first_available.sh "vivaldi" "google-chrome-stable" "zen-browser" "firefox" "brave" "chromium" "microsoft-edge-stable" "opera" "librewolf" # Browser
 bind = Super, C, exec, ~/.config/hypr/hyprland/scripts/launch_first_available.sh "code" "codium" "cursor" "zed" "zedit" "zeditor" "kate" "gnome-text-editor" "emacs" "command -v nvim && kitty -1 nvim" "command -v micro && kitty -1 micro" # Code editor
 bind = Super+Shift, W, exec, ~/.config/hypr/hyprland/scripts/launch_first_available.sh "wps" "onlyoffice-desktopeditors" # Office software
